# flint

./: ALICE_BOB_STORY.md  CRON_SETUP.md  FINAL_SUBMISSION.md  FOUNDATION_PLAN.md  PHASE0_TEST_PLAN.md  PHASE3_IMPLEMENTATION.md  README.md  SUBMISSION.md  UX_INTEGRATION_PLAN.md  package-lock.json  package.json  tailwind.config.ts
programs/escrow/: Anchor.toml  Cargo.toml  DEPLOYMENT.md
programs/escrow/src/: lib.rs
programs/flint-escrow/: Anchor.toml  README.md
programs/flint-escrow/programs/flint-escrow/: Cargo.toml
programs/flint-escrow/programs/flint-escrow/src/: lib.rs
public/: actions.json  embed.js  manifest.json
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/agent/: page.tsx
src/app/analytics/: page.tsx
src/app/business/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/embed-demo/: page.tsx
src/app/landing/: AnimatedBackground.tsx  page.tsx
src/app/pricing/: page.tsx
src/app/spec/: page.tsx
src/app/templates/: page.tsx
src/app/test/: page.tsx
src/components/: Navbar.tsx  Providers.tsx  UsageTracker.tsx  flint-loader.tsx  logo.tsx
src/components/account/: AccountProvider.tsx  ReputationBadge.tsx  UsernameSignup.tsx
src/components/dashboard/: NotificationsBell.tsx  PendingWork.tsx
src/hooks/: useAccount.ts
src/lib/: kv.ts  notifications.ts  reputation.ts  store.ts  supabase.ts  wallet.ts  webhook.ts
supabase/migrations/: 20260507_escrow_schema.sql  20260508_real_flint_update.sql  20260509_add_deadlines.sql  20260509_add_delivery_deadline.sql  20260509_add_wallet_uniqueness.sql
(+59 files in other folders)
