[package]
name = "flint-escrow"
version = "0.1.0"
description = "Flint Escrow Protocol - Secure payment escrow on Solana"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "flint_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = ">=1.18, <2.0"
