[package]
name = "flint-escrow"
version = "0.1.0"
description = "Flint Escrow Protocol - Trustless escrow for freelance payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flint_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
